fixes btn overlap

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
     max-width: 98%;
     border-block-style: hidden;
     justify-content: center;
-    padding: 2% 0;
+    padding: 2% 0 1%;
 }
 
 .selections {
